fix overflow ellipsis title modal

--- a/src/app/modules/project/details/details.component.scss
+++ b/src/app/modules/project/details/details.component.scss
@@ -40,6 +40,14 @@ img{
     gap: 20px;
     h2{
       margin: 0;
+      display: block;
+      display: -webkit-box;
+      max-width: 100%;
+      height: 74px;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .circle {
       place-content: center;
